# hootcode

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  oauth2.py  owlie_model.py  schemas.py  utils.py
backend/app/routers/: auth.py  owlie.py  question.py  roadmap.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/CodeEditor/: CodeEditor.jsx  Practice.jsx  Problem.jsx
frontend/src/components/HomePage/: About.jsx  Hero.jsx  OurProduct.jsx  index.jsx
frontend/src/components/Navbar/: AuthModal.jsx  Navbar.jsx
frontend/src/components/Owlie/: Owlie.jsx
frontend/src/components/RoadMap/: InputTag.jsx  Map.jsx  Menu.jsx  RoadMap.jsx
frontend/src/data/: constants.js  questions.json
